@@ -13,7 +13,7 @@
 #define CL_USE_DEPRECATED_OPENCL_1_2_APIS
 #define CL_USE_DEPRECATED_OPENCL_2_0_APIS
 
-#ifdef DARWIN
+#ifdef __APPLE__
 #include <OpenCL/cl.h>
 #endif
 
