@@ -69,7 +69,7 @@ int ocl_init (OCL_PTR *ocl)
 
   #ifdef _WIN
   ocl->lib = hc_dlopen ("OpenCL");
-  #elif DARWIN
+  #elif __APPLE__
   ocl->lib = hc_dlopen ("/System/Library/Frameworks/OpenCL.framework/OpenCL", RTLD_NOW);
   #else
   ocl->lib = hc_dlopen ("libOpenCL.so", RTLD_NOW);
